--- a/jobcontrol/jobcontrol/views/event_menu.xml
+++ b/jobcontrol/jobcontrol/views/event_menu.xml
@@ -84,6 +84,26 @@
             <field name="sequence" eval="2"/>
         </record>
 
+        <record id="action_jobcontrol_eventmanagement_setup_item" model="ir.actions.act_window">
+            <field name="name">Event Setup Item</field>
+            <field name="res_model">jobcontrol.eventmanagement.room_setup_item</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
+        <record id="action_jobcontrol_eventmanagement_setup_item_tree" model="ir.actions.act_window.view">
+            <field name="act_window_id" ref="action_jobcontrol_eventmanagement_setup_item"/>
+            <field name="view_id" ref="jobcontrol_eventmanagement_setup_item_list"/>
+            <field name="view_mode">tree</field>
+            <field name="sequence" eval="1"/>
+        </record>
+
+        <record id="action_jobcontrol_eventmanagement_setup_item_form" model="ir.actions.act_window.view">
+            <field name="act_window_id" ref="action_jobcontrol_eventmanagement_setup_item"/>
+            <field name="view_id" ref="jobcontrol_eventmanagement_setup_item_form"/>
+            <field name="view_mode">form</field>
+            <field name="sequence" eval="2"/>
+        </record>
+
         <!-- Top menu item -->
         <menuitem name="Eventmanagement" id="jobcontrol_eventmanagement_menu_root"/>
         <!--     menu categories -->
