--- a/jobcontrol/jobcontrol/views/jobcontrol_menu.xml
+++ b/jobcontrol/jobcontrol/views/jobcontrol_menu.xml
@@ -6,11 +6,21 @@
         <field name="res_model">jobcontrol.job</field>
         <field name="view_mode">tree,form</field>
     </record>
-    <record id="action_jobcontrol_job_category" model="ir.actions.act_window">
-        <field name="name">Job Categories</field>
-        <field name="res_model">jobcontrol.job_category</field>
-        <field name="view_mode">tree,form</field>
-    </record>
+
+    <record id="action_jobcontrol_tree" model="ir.actions.act_window.view">
+            <field name="act_window_id" ref="action_jobcontrol_job"/>
+            <field name="view_id" ref="jobcontrol.list"/>
+            <field name="view_mode">tree</field>
+            <field name="sequence" eval="1"/>
+        </record>
+
+        <record id="action_jobcontrol_form" model="ir.actions.act_window.view">
+            <field name="act_window_id" ref="action_jobcontrol_job"/>
+            <field name="view_id" ref="jobcontrol.view_job_form"/>
+            <field name="view_mode">form</field>
+            <field name="sequence" eval="2"/>
+        </record>
+
     <record id="action_jobcontrol_job_costs_list" model="ir.actions.act_window">
         <field name="name">Job Costs List</field>
         <field name="res_model">jobcontrol.job_costs</field>
@@ -30,11 +40,6 @@
               name="Jobs"
               parent="menu_jobcontrol"
               action="action_jobcontrol_job"
-    />
-    <menuitem id="menu_jobcontrol_job_category"
-              name="Job Categories"
-              parent="menu_jobcontrol"
-              action="action_jobcontrol_job_category"
     />
     <menuitem id="menu_jobcontrol_job_costs"
               name="Job Costs"
