--- a/jobcontrol/jobcontrol/views/purchase_order_exented_view.xml
+++ b/jobcontrol/jobcontrol/views/purchase_order_exented_view.xml
@@ -5,6 +5,7 @@
         <field name="inherit_id" ref="purchase.purchase_order_form"/>
         <field name="arch" type="xml">
             <field name="date_order" position="before">
+                <field name="subject"/>
                 <field name="session_id"/>
                 <field name="event_id" readonly="session_id"/>
                 <field name="job_id" readonly="event_id"/>
