--- a/jobcontrol/jobcontrol/views/job_views.xml
+++ b/jobcontrol/jobcontrol/views/job_views.xml
@@ -103,6 +103,58 @@
                             </field>
                         </page>
 
+                        <page string="Deliveries" name="stock_move_lines">
+                            <field name="stock_move_lines"
+                                   mode="tree"
+                                   type="xml">
+                                <tree string="Delivery Entries" create="True" delete="False">
+                                    <field name="company_id" column_invisible="True"/>
+                                    <field name="priority" optional="show" widget="priority" nolabel="1"/>
+                                    <field name="name" decoration-bf="1"/>
+                                    <field name="location_id" options="{'no_create': True}" string="From"
+                                           groups="stock.group_stock_multi_locations" optional="show"
+                                           readonly="state == 'done'"/>
+                                    <field name="location_dest_id" options="{'no_create': True}" string="To"
+                                           groups="stock.group_stock_multi_locations" optional="show"
+                                           readonly="state == 'done'"/>
+                                    <field name="partner_id" optional="show" readonly="state in ['cancel', 'done']"/>
+                                    <field name="is_signed" string="Signed" optional="hide"
+                                           groups="stock.group_stock_sign_delivery"/>
+                                    <field name="user_id" optional="hide" widget="many2one_avatar_user"
+                                           readonly="state in ['cancel', 'done']"/>
+                                    <field name="scheduled_date" optional="show" widget="remaining_days"
+                                           invisible="state in ('done', 'cancel')"
+                                           readonly="state in ['cancel', 'done']"/>
+                                    <field name="picking_type_code" column_invisible="True"/>
+                                    <field name="products_availability_state" column_invisible="True"
+                                           options='{"lazy": true}'/>
+                                    <field name="products_availability" options='{"lazy": true}'
+                                           optional="hide"
+                                           invisible="picking_type_code != 'outgoing' or state not in ['confirmed', 'waiting', 'assigned']"
+                                           decoration-success="state == 'assigned' or products_availability_state == 'available'"
+                                           decoration-warning="state != 'assigned' and products_availability_state in ('expected', 'available')"
+                                           decoration-danger="state != 'assigned' and products_availability_state == 'late'"/>
+                                    <field name="date_deadline" optional="hide" widget="remaining_days"
+                                           invisible="state in ('done', 'cancel')"/>
+                                    <field name="date_done" string="Effective Date" optional="hide"/>
+                                    <field name="origin" optional="show" readonly="state in ['cancel', 'done']"/>
+                                    <field name="backorder_id" optional="hide"/>
+                                    <field name="picking_type_id" optional="hide"/>
+                                    <field name="company_id" groups="base.group_multi_company" optional="show"/>
+                                    <field name="state" optional="show" widget="badge"
+                                           decoration-danger="state=='cancel'"
+                                           decoration-info="state== 'assigned'"
+                                           decoration-muted="state == 'draft'"
+                                           decoration-success="state == 'done'"
+                                           decoration-warning="state not in ('draft','cancel','done','assigned')"/>
+                                    <field name="activity_exception_decoration" widget="activity_exception"/>
+                                    <field name="json_popover" widget="stock_rescheduling_popover" nolabel="1"
+                                           invisible="not json_popover"/>
+                                    <button type="object" name="get_formview_action" string="Open" icon="fa-edit"/>
+                                </tree>
+                            </field>
+                        </page>
+
                         <page string="Sales Invoices" name="sales_invoice_entries">
                             <field name="sales_invoice_order_line"
                                    mode="tree"
