add project relation to jobcontrol

--- a/jobcontrol/jobcontrol/views/purchase_order_exented_view.xml
+++ b/jobcontrol/jobcontrol/views/purchase_order_exented_view.xml
@@ -6,9 +6,9 @@
         <field name="arch" type="xml">
             <field name="date_order" position="before">
                 <field name="subject"/>
+                <field name="job_id" />
+                <field name="event_id" />
                 <field name="session_id"/>
-                <field name="event_id" readonly="session_id"/>
-                <field name="job_id" readonly="event_id"/>
             </field>
         </field>
     </record>
