--- a/jobcontrol/jobcontrol/views/event_views.xml
+++ b/jobcontrol/jobcontrol/views/event_views.xml
@@ -217,6 +217,40 @@
                                 </tree>
                             </field>
                         </page>
+                        <page string="Task Management">
+                            <field name="task_management_line"
+                                   class="o_sale_order"
+                                   limit="100">
+                                <tree decoration-muted="active == False" string="Task Management" create="True"
+                                      delete="False"
+                                      default_order="is_favorite desc, sequence, name, id"
+                                      js_class="project_project_list">
+                                    <field name="sequence" column_invisible="True"/>
+                                    <field name="name" column_invisible="1"/>
+                                    <field name="message_needaction" column_invisible="True"/>
+                                    <field name="active" column_invisible="True"/>
+                                    <field name="is_favorite" string="Favorite" nolabel="1" widget="boolean_favorite"
+                                           optional="hide"/>
+                                    <field name="display_name" string="Name" class="fw-bold"/>
+                                    <field name="date_start" string="Planned Date" widget="daterange"
+                                           options="{'end_date_field': 'date', 'always_range': '1'}" optional="hide"/>
+                                    <field name="date" column_invisible="True"/>
+                                    <field name="user_id" optional="show" string="Project Manager"
+                                           widget="many2one_avatar_user"
+                                           options="{'no_open':True, 'no_create': True, 'no_create_edit': True}"/>
+                                    <field name="last_update_color" column_invisible="True"/>
+                                    <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"
+                                           optional="show"/>
+                                    <field name="last_update_status" string="Status" optional="show"
+                                           widget="project_state_selection"/>
+                                    <field name="company_id" column_invisible="True"/>
+                                    <field name="stage_id" options="{'no_open': True}"
+                                           domain="[('company_id', 'in', (company_id, False))]" optional="show"/>
+                                    <button string="View Tasks" name="action_view_tasks" type="object"/>
+                                    <button type="object" name="get_formview_action" string="Open" icon="fa-edit"/>
+                                </tree>
+                            </field>
+                        </page>
                     </notebook>
                     <div class="oe_chatter">
                         <field name="message_follower_ids"/>
@@ -358,7 +392,7 @@
                     </header>
                     <group>
                         <field name="session_id"/>
-                        <field name="event_id" readonly="session_id"/>
+                        <field name="event_id" />
                         <field name="event_name" invisible="True"/>
                         <field name="subject"/>
                         <field name="name"/>
